--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,8 @@
         "config": { "includeFiles": ["dist/**"] }
       }
     ],
+    app.use(express.static(__dirname + '/public'));
+
     "routes": [
       {
         "src": "/(.*)",
