--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,7 @@
     }
   ],
   "env": {
-    "DATABASE_URL": "postgres://SenecaDB_owner:bQL5YykxAwS3@ep-shiny-cell-a561nd35.us-east-2.aws.neon.tech:5432/SenecaDB"
+    "DATABASE_URL": "postgres://SenecaDB_owner:bQL5YykxAwS3@ep-shiny-cell-a561nd35.us-east-2.aws.neon.tech:5432/SenecaDB",
+    "CLOUDINARY_URL": "cloudinary://<your_api_key>:<your_api_secret>@dcetjtubd"
   }
 }
